Bug 92009 - ES3-CTS.gtf.GL3Tests.packed_pixels.packed_pixels fails
Summary: ES3-CTS.gtf.GL3Tests.packed_pixels.packed_pixels fails
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Tapani Pälli
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-15 05:20 UTC by Tapani Pälli
Modified: 2015-09-18 04:45 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
hopeful fix (1.93 KB, patch)
2015-09-15 06:19 UTC, Tapani Pälli
Details | Splinter Review

Description Tapani Pälli 2015-09-15 05:20:47 UTC
bisected to:
--- 8< ------------------
81d2fd91a90e5b2fd9fd74792a7a7c329f0e4d29 is the first bad commit
commit 81d2fd91a90e5b2fd9fd74792a7a7c329f0e4d29
Author: Rob Clark <robclark@freedesktop.org>
Date:   Mon Aug 10 06:58:37 2015 -0400

    mesa: add NV_read_{depth,stencil,depth_stencil} extensions
    
    These extensions allow reading depth/stencil for GLES contexts, which is
    useful for tools like apitrace.
    
    Signed-off-by: Rob Clark <robclark@freedesktop.org>
    Reviewed-by: Marek Olšák <marek.olsak@amd.com>
Comment 1 Tapani Pälli 2015-09-15 06:19:12 UTC
Created attachment 118281 [details] [review]
hopeful fix

possible fix, will run for regressions
Comment 2 Tapani Pälli 2015-09-18 04:45:58 UTC
commit afa1efdc8522d987e3af7c7a6272021caa33eb82
Author: Tapani Pälli <tapani.palli@intel.com>
Date:   Tue Sep 15 09:17:20 2015 +0300

    mesa: fix errors when reading depth with glReadPixels
    
    OpenGL ES 3.0 spec 3.7.2 "Transfer of Pixel Rectangles" specifies
    DEPTH_COMPONENT, UNSIGNED_INT as a valid couple, validation for
    internal format is checked by is_float_depth().
    
    Fix regression caused by 81d2fd91a90e5b2fd9fd74792a7a7c329f0e4d29 in:
       ES3-CTS.gtf.GL3Tests.packed_pixels.packed_pixels
    
    Test uses GL_DEPTH_COMPONENT, UNSIGNED_INT only when GL_NV_read_depth
    extension is present.
    
    v2: change check in _mesa_error_check_format_and_type to be explicit
        for ES 2.0+, desktop OpenGL does not allow this behaviour + uses
        this function for both glReadPixels and glDrawPixels validation.
        (No Piglit regressions seen with v2.)
    
    Signed-off-by: Tapani Pälli <tapani.palli@intel.com>
    Reviewed-by: Anuj Phogat <anuj.phogat@gmail.com>
    Reviewed-by: Samuel Iglesias Gonsálvez <siglesias@igalia.com> [v1]
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=92009
    Cc: "10.6 11.0" <mesa-stable@lists.freedesktop.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.